kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: challenge
  labels:
    app: certi-app
