kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: certi-app-svc
  namespace: challenge
  labels:
    app: certi-app
spec:
  selector:
    app: certi-app
  ports:
    - port: 8080
      targetPort: 3008
  type: NodePort
